--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -13,9 +13,18 @@ jobs:
       - name: Delete old data in /tmp
         run: rm -rf /tmp/ddsb*
       - uses: actions/checkout@v3
-      - run: npm install @types/node --save-dev
-      - name: Compile TypeScript
-        run: tsc
+      - name: Set up JDK 17
+        uses: actions/setup-java@v2
+        with:
+          java-version: 17
+          distribution: 'adopt'
+          cache: gradle
+      - name: Validate Gradle wrapper
+        uses: gradle/wrapper-validation-action@e6e38bacfdf1a337459f332974bb2327a31aaf4b
+      - name: Build with Gradle
+        run: ./gradlew build
+      - name: Compile code
+        run: ./gradlew shadowJar
       - name: Build the Docker image
         run: docker build . --file Dockerfile --tag ddsb:$(date +%s)
       - name: Save to /tmp/
