--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -27,20 +27,17 @@ jobs:
         run: rm -rf build/libs/*.jar
       - name: Compile code
         run: ./gradlew shadowJar
-      - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag ddsb:$(date +%s)
-      - name: Save to /tmp/
-        run: docker save ddsb -o /tmp/ddsb
-
-      - name: Release
-        uses: ncipollo/release-action@v1
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
         with:
-          artifacts: "/tmp/ddsb"
-          token: ${{ secrets.GITHUB_TOKEN }}
-          prerelease: true
-          tag: v1.1.${{ github.run_number }}
-
-      - uses: actions/upload-artifact@master
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Build and push
+        uses: docker/build-push-action@v3
         with:
-          name: ddsb
-          path: /tmp/ddsb
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/ddsb:latest
