--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -11,6 +11,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - name: Docker Setup QEMU
+        uses: docker/setup-qemu-action@v2.1.0
       - name: Set up JDK 11
         uses: actions/setup-java@v3.9.0
         with:
@@ -37,5 +39,6 @@ jobs:
         with:
           context: .
           file: ./Dockerfile
+          platforms: linux/arm/v7
           push: true
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/ddsb:armv7
