--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -32,7 +32,18 @@ jobs:
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
+        
+      - name: Set push parameter
+        id: setPushParameter
+        run: |
+          if [[ ${{ github.ref }} == 'refs/heads/master' ]]; then
+            echo "::set-output name=push::true"
+          else
+            echo "::set-output name=push::false"
+          fi
+          
       - name: Build and push
+        if: ${{ steps.setPushParameter.outputs.push == 'true' }}
         uses: docker/build-push-action@v3
         with:
           context: .
