--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -23,6 +23,8 @@ jobs:
         run: sudo chmod +x gradlew && ./gradlew build
       - name: remove old builds
         run: rm -rf build/libs/*.jar
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
       - name: Compile code
         run: ./gradlew shadowJar
       - name: Login to Docker Hub
@@ -50,5 +52,8 @@ jobs:
         with:
           context: .
           file: ./Dockerfile
+          platforms: linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v8
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/ddsb:latest
+          tags: |
+            ${{ secrets.DOCKER_HUB_USERNAME }}/ddsb:dev
+            ${{ secrets.DOCKER_HUB_USERNAME }}/ddsb:$(date + '%Y%m%d%H%M%S')
