--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,52 +1,34 @@
 name: Docker Image CI
 
-on:
-  push:
-    branches: [ "dev" ]
-  pull_request:
-    branches: [ "dev" ]
+on: [push]
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3.12.0
-        with:
-          java-version: 17
-          distribution: 'adopt'
-          cache: gradle
-      - name: Validate Gradle wrapper
-        uses: gradle/wrapper-validation-action@v1
-      - name: Build with Gradle
-        run: sudo chmod +x gradlew && ./gradlew build
-      - name: remove old builds
-        run: rm -rf build/libs/*.jar
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
-      - name: Compile code
-        run: ./gradlew shadowJar
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
-      - name: Set up Docker Buildx
+      - name: Set up Docker BuildX
         uses: docker/setup-buildx-action@v2
         
       - name: Set push parameter
         id: setPushParameter
         run: |
           if [[ ${{ github.ref }} == 'refs/heads/master' ]]; then
-            echo "PUSH=true" >> $GITHUB_ENV
+            echo "TAG=latest" >> $GITHUB_ENV
           else
-            echo "PUSH=false" >> $GITHUB_ENV
+            echo "TAG=dev" >> $GITHUB_ENV
           fi
           
       - name: Build and push
         env:
-          PUSH: ${{ env.PUSH }}
+          PUSH: true
         uses: docker/build-push-action@v4
         with:
           context: .
@@ -54,4 +36,4 @@ jobs:
           platforms: linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v8
           push: true
           tags: |
-            ${{ secrets.DOCKER_HUB_USERNAME }}/ddsb:dev
+            ${{ secrets.DOCKER_HUB_USERNAME }}/ddsb:${{ env.TAG }}
