--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -38,7 +38,7 @@ jobs:
           tags: |
             ${{ secrets.DOCKER_HUB_USERNAME }}/ddsb:${{ env.TAG }}
 
-  build-arm-v7-8:
+  build-arm:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -68,7 +68,7 @@ jobs:
         with:
           context: .
           file: ./Dockerfile
-          platforms: linux/arm/v8,linux/arm/v7
+          platforms: linux/arm64/v8,linux/arm/v7
           push: true
           tags: |
             ${{ secrets.DOCKER_HUB_USERNAME }}/ddsb:${{ env.TAG }}
