--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -68,7 +68,7 @@ jobs:
         with:
           context: .
           file: ./Dockerfile
-          platforms: linux/arm64/v8,linux/arm/v7
+          platforms: linux/arm64/v8
           push: true
           tags: |
             ${{ secrets.DOCKER_HUB_USERNAME }}/ddsb:${{ env.TAG }}
